WIP for #545